# zkevm

./: README.md
common/: Cargo.toml
common/src/: db_utils.rs  json_rpc.rs  lib.rs
contracts/: ZkEvmL1Bridge.sol  ZkEvmL2MessageDeliverer.sol  ZkEvmMagicNumbers.sol
contracts/artifacts/: Proxy.json  Proxy_metadata.json  ZkEvmL1Bridge.json  ZkEvmL1Bridge_metadata.json  ZkEvmL2MessageDeliverer.json  ZkEvmL2MessageDeliverer_metadata.json  ZkEvmL2MessageDispatcher.json  ZkEvmL2MessageDispatcher_metadata.json
contracts/optimism/: L1OptimismBridge.sol  OptimismWrapper.sol
contracts/optimism/artifacts/: L1OptimismBridge.json  L1OptimismBridge_metadata.json  L2OptimisimBridge.json  L2OptimisimBridge_metadata.json
coordinator/: Cargo.toml  Jenkinsfile
coordinator/src/: shared_state.rs  structs.rs  utils.rs
coordinator/tests/: hop.rs  native_deposit.rs
coordinator/tests/common/: mod.rs
deploy/coordinator/sandbox/: deployment.yaml  service.yaml
deploy/prover/sandbox/: deployment.yaml  service.yaml
dev/: Cargo.toml
docker/coordinator/: Dockerfile
docker/geth/: init.sh
docker/geth/templates/: l2-testnet1.json
docker/prover/: Dockerfile
prover/: Cargo.toml  Jenkinsfile
prover/src/: shared_state.rs
scripts/: compile_contracts.sh
